
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct vnode {int dummy; } ;


 int build_path_with_parent (struct vnode*,struct vnode*,char*,int,int*,int ,int ) ;
 int vfs_context_current () ;

int
vn_getpath_fsenter_with_parent(struct vnode *dvp, struct vnode *vp, char *pathbuf, int *len)
{
 return build_path_with_parent(vp, dvp, pathbuf, *len, len, 0, vfs_context_current());
}
