; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_subr.c_vn_getpath_fsenter_with_parent.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_subr.c_vn_getpath_fsenter_with_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vn_getpath_fsenter_with_parent(%struct.vnode* %0, %struct.vnode* %1, i8* %2, i32* %3) #0 {
  %5 = alloca %struct.vnode*, align 8
  %6 = alloca %struct.vnode*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store %struct.vnode* %0, %struct.vnode** %5, align 8
  store %struct.vnode* %1, %struct.vnode** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load %struct.vnode*, %struct.vnode** %6, align 8
  %10 = load %struct.vnode*, %struct.vnode** %5, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %8, align 8
  %15 = call i32 (...) @vfs_context_current()
  %16 = call i32 @build_path_with_parent(%struct.vnode* %9, %struct.vnode* %10, i8* %11, i32 %13, i32* %14, i32 0, i32 %15)
  ret i32 %16
}

declare dso_local i32 @build_path_with_parent(%struct.vnode*, %struct.vnode*, i8*, i32, i32*, i32, i32) #1

declare dso_local i32 @vfs_context_current(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
